Comment out `white-space: pre-wrap` and `word-wrap: break-word` in `code[class*="language-"]` to resolve text wrapping issues

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -57,8 +57,8 @@ code,
 code[class*="language-"] {
   font-size: 0.9rem;
   color: inherit;
-  white-space: pre-wrap;
-  word-wrap: break-word;
+  /* white-space: pre-wrap; */
+  /* word-wrap: break-word; */
   /*margin: inherit;*/
   /*padding: inherit;*/
 }
